tests/errors/tc_expr_unary_neg.lx
@module "main"

pub const main -> fn () int {
    let x: int = -"hello";
    return 0;
}
